--- a/MODULO_03_INICIANDO_COM_O_CSS/css/style.css
+++ b/MODULO_03_INICIANDO_COM_O_CSS/css/style.css
@@ -1,7 +1,28 @@
-.div01 > h1{
-    color: blue;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-#div02 h1{
-color: orange;
+.artigo{
+    width: 1280px;
+    margin: 10px auto;
+    text-align: center;
+}
+
+.artigo h1{
+    color: blue;
+    font-size: 23px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: normal;
+    font-weight: normal;
+}
+
+.artigo b{
+    color: #b4b4b4;
+    font-size: 17px;
+    font-family: 'tahoma';
+    font-style: normal;
+    font-weight: bold;
+    line-height: 48px;
+    margin-top: 12px;
 }
